@@ -2,6 +2,7 @@ sbin_PROGRAMS = bmc-watchdog
 
 bmc_watchdog_CPPFLAGS = \
 	-I$(top_srcdir)/common/toolcommon \
+	-I$(top_srcdir)/common/daemonutil \
 	-I$(top_srcdir)/common/miscutil \
 	-I$(top_srcdir)/common/parsecommon \
 	-I$(top_srcdir)/common/portability \
@@ -12,6 +13,7 @@ bmc_watchdog_CPPFLAGS = \
 
 bmc_watchdog_LDADD = \
 	$(top_builddir)/common/toolcommon/libtoolcommon.la \
+	$(top_builddir)/common/daemonutil/libdaemonutil.la \
 	$(top_builddir)/common/miscutil/libmiscutil.la \
 	$(top_builddir)/common/parsecommon/libparsecommon.la \
 	$(top_builddir)/common/portability/libportability.la \
@@ -24,6 +26,9 @@ bmc_watchdog_SOURCES = \
 	bmc-watchdog-argp.h
 
 $(top_builddir)/common/toolcommon/libtoolcommon.la : force-dependency-check
+	@cd `dirname $@` && $(MAKE) `basename $@`
+
+$(top_builddir)/common/daemonutil/libdaemonutil.la : force-dependency-check
 	@cd `dirname $@` && $(MAKE) `basename $@`
 
 $(top_builddir)/common/miscutil/libmiscutil.la : force-dependency-check
