@@ -1,0 +1,13 @@
+noinst_LTLIBRARIES = \
+	libdaemonutil.la
+
+libdaemonutil_la_CPPFLAGS = \
+	-I$(top_srcdir)/common/miscutil \
+	-I$(top_srcdir)/common/portability \
+	-D_GNU_SOURCE \
+	-D_REENTRANT
+
+libdaemonutil_la_SOURCES = \
+	daemon-util.c \
+	daemon-util.h
+
